# agent-debugger

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  README_LLM_FUNCTION_CALLING.md  app.py  app_fastapi.py  demo_llm_agent.py  main.py  pyproject.toml  run_fastapi.py  start_agent_debugger.py  test_llm_function_calling.py
agent_engine/: __init__.py  core.py  executor.py  models.py
models/: schemas.py
templates/: debug.html  debug_fastapi.html  index.html  index_fastapi.html
tools/: base.py  manager.py  web_search.py
